--- a/.gitignore
+++ b/.gitignore
@@ -39,9 +39,9 @@ bower_components
 build/Release
 
 # Dependency directories
+UserFile/
 node_modules/
 jspm_packages/
-files_user/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
